# v3-node

./: .gitignore  Cargo.toml  README.MD  README.md
data/: genesis.json  pools.json
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  types.rs
src/db/: models.rs  schema.rs
src/network/: chainspec.rs  handshake.rs  manager.rs  mod.rs  peer.rs  upgrade.rs
src/node/: node.rs
src/pool/: decoder.rs
