[package]
name = "v3-node"
version = "0.1.0"
edition = "2024"

[lib]
name = "v3_node"
path = "src/lib.rs"

[[bin]]
name = "v3-node"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Reth — P2P networking stack
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.3" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.3" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.3" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.3" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.3" }

# Alloy
alloy = "1.7.3"

# Crypto (for generating node identity)
secp256k1 = { version = "0.31.1", features = ["rand"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
